# final-project-sergihrs

./: main.py  pyproject.toml
models/: random_forest_model.joblib
notebooks/: 01_train.ipynb  02_report.ipynb
src/: evaluation_plots.py
